# django_chat

./: .gitignore  pyproject.toml  requirements.txt
core/: settings.py
